<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Open Explorer Beta</string>
    <string name="app_title">OEβ</string>
    <string name="s_search">Search</string>
    <string name="s_photos">Photos</string>
    <string name="s_videos">Videos</string>
    <string name="s_music">Music</string>
    <string name="s_downloads">Downloads</string>
    <string name="s_external">External</string>
    <string name="s_internal">Internal</string>
    <string name="s_view">View</string>
    <string name="s_bookmarks">Bookmarks</string>
    <string name="s_menu_favorites">Toggle Bookmarks</string>
    <string name="s_menu_sort">Sort</string>
    <string name="s_menu_sort_name_asc">Sort by Name (A-Z)</string>
    <string name="s_menu_sort_name_desc">Sort by Name (Z-A)</string>
    <string name="s_menu_sort_date_asc">Sort by Newest</string>
    <string name="s_menu_sort_date_desc">Sort by Oldest</string>
    <string name="s_menu_sort_size_asc">Sort by Largest</string>
    <string name="s_menu_sort_size_desc">Sort by Smallest</string>
    <string name="s_menu_sort_type">Sort by Filetype</string>
    <string name="s_menu_multi">Multi-Select</string>
    <string name="s_menu_grid">Grid View</string>
    <string name="s_menu_list">List View</string>
    <string name="s_menu_carousel">Carousel</string>
    <string name="s_menu_hidden">Show Hidden Files</string>
    <string name="s_menu_thumbs">Show Image Thumbnails</string>
    <string name="s_menu_new_folder">New Folder</string>
    <string name="s_menu_other">Other Settings</string>
    <string name="s_menu_flush">Flush Cache</string>
    <string name="s_menu_root">Root</string>
    <string name="s_menu_prefs_folder">Folder Preferences</string>
    <string name="s_menu_prefs_global">Global Preferences</string>
    <string name="s_menu_info">Info</string>
    <string name="s_menu_copy">Copy</string>
    <string name="s_menu_cut">Cut</string>
    <string name="s_menu_paste">Paste</string>
    <string name="s_menu_delete">Delete</string>
    <string name="s_menu_share">Send/Share…</string>
    <string name="s_menu_zip">Zip file(s)…</string>
    <string name="s_menu_unzip">Unzip…</string>
    <string name="s_menu_rename">Rename…</string>
    <string name="s_menu_bookmark">Add Bookmark</string>
    <string name="s_save">Save</string>
    <string name="s_saveas">Save as…</string>
    <string name="s_cancel">Cancel</string>
    <string name="s_size">Size</string>
    <string name="s_none">None</string>
    <string name="s_pref_servers">Additional Servers</string>
    <string name="s_pref_server_add">+ Add New Server</string>
    <string name="s_pref_display">Display Preferences</string>
    <string name="s_pref_hidden">Show Hidden Files</string>
    <string name="s_pref_hidden_summary">Display hidden files and folders</string>
    <string name="s_pref_thumbs">Show Image Thumbnails</string>
    <string name="s_pref_thumbs_summary">Display a thumbnail for Image/Video/App files</string>
    <string name="s_pref_view">View Mode</string>
    <string name="s_pref_view_summary">Display files in a grid or list</string>
    <string name="s_pref_sort">Sorting</string>
    <string name="s_pref_sort_summary">Choose how to sort files and folders</string>
    <string name="s_pref_advanced">Advanced</string>
    <string name="s_pref_server_name">Server name</string>
    <string name="s_pref_server_name_summary">Enter Server Name</string>
    <string name="s_pref_server_url">Server URL</string>
    <string name="s_pref_server_url_summary">Enter full server URL</string>
    <string name="s_pref_server_host">Server Host</string>
    <string name="s_pref_server_user">User</string>
    <string name="s_pref_server_user_summary">Username</string>
    <string name="s_pref_server_password">Password</string>
    <string name="s_pref_server_password_summary">Login Password</string>
    <string name="s_pref_server_path">Subdirectory</string>
    <string name="s_pref_server_path_summary">Enter default login path</string>
    <string name="s_pref_server_identity_file">Identity file</string>
    <string name="s_pref_server_select_identity_file">Select identity file</string>
    <string name="s_pref_server_extras">Extra Settings</string>
    <string name="s_pref_server_update">Add/Update Server</string>
    <string name="s_pref_server_type">Server Type</string>
    <string name="s_files">files</string>
    <string name="s_create">Create</string>
    <string name="s_title_holding_x_files">Holding %s files</string>
    <string name="s_title_newfolder">Create a new folder</string>
    <string name="s_title_send">Send %s</string>
    <string name="s_title_unzip">Unzip %s</string>
    <string name="s_title_zip">Zip %s</string>
    <string name="s_title_executing">Executing</string>
    <string name="s_title_deleting">Deleting</string>
    <string name="s_title_searching">Searching</string>
    <string name="s_title_moving">Moving</string>
    <string name="s_title_copying">Copying</string>
    <string name="s_title_zipping">Zipping</string>
    <string name="s_title_unzipping">Unzipping</string>
    <string name="s_title_wait">Please wait…</string>
    <string name="s_alert_confirm_delete">Deleting %s cannot be undone. Are you sure you want to continue?</string>
    <string name="s_alert_rename">Please type the new name this file</string>
    <string name="s_alert_newfolder">Type the name of the new folder:</string>
    <string name="s_newfile_prompt">File Type</string>
    <string name="s_alert_unzip">Would you like to unzip %s here or some other folder?</string>
    <string name="s_button_unzip_here">Unzip here</string>
    <string name="s_button_unzip_else">Unzip elsewhere…</string>
    <string name="s_msg_none">File(s) could not be </string>
    <string name="s_msg_folder_exists">Folder already exists</string>
    <string name="s_msg_some">Some file(s) could not be </string>
    <string name="s_msg_all">File(s) successfully </string>
    <string name="s_msg_deleted">deleted</string>
    <string name="s_msg_moved">moved</string>
    <string name="s_msg_copied">copied</string>
    <string name="s_remove">Remove</string>
    <string name="s_eject">Eject</string>
    <string name="s_update">Update</string>
    <string name="s_alert_bookmark_rename">Change the title of your bookmark.</string>
    <string name="s_title_bookmark_prefix">Manage Bookmark: </string>
    <string name="s_alert_remove_safe">You may now safely remove the drive.</string>
    <string name="s_alert_remove_error">Unable to eject.</string>
    <string name="s_menu_about">About</string>
    <string name="s_about_version">Version</string>
    <string name="s_about_author">Author</string>
    <string name="s_about_site">Website</string>
    <string name="s_about_email">Email</string>
    <string name="s_about_recent">Updates</string>
    <string name="s_chooser_email">Send Feedback…</string>
    <string name="s_status_loading">Loading…</string>
    <string name="s_menu_open">Open with…</string>
    <string name="s_menu_edit">Edit with…</string>
    <string name="s_pref_stats_title">Help improve OpenExplorer</string>
    <string name="s_pref_stats_summary">Send anonymous usage statistics. This does not include any information that could be used to identify the user.</string>
    <string name="s_error_no_intents">No installed applications can read this type of file.</string>
    <string name="s_menu_root_disabled">Root disabled</string>
    <string name="s_pref_start">Starting Folder</string>
    <string name="s_pref_start_summary">Indicates which folder OpenExplorer starts in</string>
    <string name="s_custom">Custom…</string>
    <string name="s_text_intro_top">Welcome to OpenExplorer Beta!</string>
    <string name="s_text_intro_body">The goal of OpenExplorer is to make you more productive within the filesystem and in the cloud. Whether you need to manage videos or photos from multiple locations or manage your webserver remotely via FTP, OpenExplorer can suit your needs.\n\nPlease select your starting path:</string>
    <string name="s_info_num_folders">Number of folders: </string>
    <string name="s_info_num_files">Number of files: </string>
    <string name="s_info_last_modified">Last Modified: </string>
    <string name="s_info_permissions">File Permissions: </string>
    <string name="s_info_permission_read">Read: </string>
    <string name="s_info_permission_write">Write: </string>
    <string name="s_info_permission_execute">Execute: </string>
    <string name="s_toggle_keyboard">Keyboard</string>
    <string name="s_show_password">Show Password</string>
    <string name="s_error_ftp">Error connecting to Network</string>
    <string name="s_prompt_zip">Enter filename of new Zip file:</string>
    <string name="app_edit">Edit with OpenExplorer</string>
    <string name="s_menu_more">More options...</string>
    <string name="s_msg_low_memory">Low memory!</string>
    <string name="s_clear">Clear</string>
    <string name="s_menu_delete_all">Delete All</string>
    <string name="s_menu_move_all">Move Here</string>
    <string name="s_menu_copy_all">Copy Here</string>
    <string name="s_confirm_delete">Are you sure that you want to delete %s?</string>
    <string name="s_error_same_destination">The destination directory is the same.</string>
    <string name="s_sample_notification">Copying -> sdcard</string>
    <string name="s_pref_fullscreen">Full Screen</string>
    <string name="s_pref_fullscreen_summary_on">Hide Notification Bar</string>
    <string name="s_pref_fullscreen_summary_off">Show Notification Bar</string>
    <string name="s_pref_pagers">View Pagers</string>
    <string name="s_pref_pagers_summary_on">Horizontal Swiping = Directory Navigation</string>
    <string name="s_pref_pagers_summary_off">Horizontal Swiping Disabled</string>
    <string name="s_alert_new_media">New Media Inserted!</string>
    <string name="s_warn_pager_title">New Feature: View Pagers</string>
    <string name="s_warn_pager">Swipe left to right to go up a directory and right to left to go back. This should make it easier to navigate. Try it out (on external media)!</string>
    <string name="s_warn_confirm">Do you understand?</string>
    <string name="s_warn_disable">Disable</string>
    <string name="s_pref_intent_internal">Internal Intents</string>
    <string name="s_pref_intent_internal_on">Use OpenExplorer Intent Manager</string>
    <string name="s_pref_intent_internal_off">Use System Intent Manager</string>
    <string name="s_pref_text_internal">Use Internal Text Editor</string>
    <string name="s_text_editor_title">Text Editor</string>
    <string name="s_pref_show_root">Show Root File System (/)</string>
    <string name="s_pref_show_internal">Show Internal Media</string>
    <string name="s_pref_show_external">Show External Media</string>
    <string name="s_error_no_media">It looks like there is no media inserted. Please disable USB sharing or re-insert media.</string>
    <string name="s_prompt_password">Enter Password</string>
    <string name="s_add">Add</string>
    <string name="s_server_ftp">FTP</string>
    <string name="s_server_sftp">SFTP</string>
    <string name="s_default">Default</string>
    <string name="s_menu_refresh">Refresh Folder</string>
    <string name="s_pref_basebar">Split Action Bar</string>
    <string name="button_translate">Translate</string>
    <string name="s_menu_sort_folders">Folders First</string>
    <string name="s_title_operations">File Operations</string>
    <string name="s_pref_showup">Always show "up" directory</string>
    <string name="s_menu_new_file">New File/Folder</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_light">Light</string>
    <string name="s_pref_view_folders">Folders Preferences</string>
    <string name="s_pref_view_general">General Preferences</string>
</resources>