<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
		android:title="Settings">
	
	<PreferenceCategory android:key="servers" android:title="@string/s_pref_servers">
    	<PreferenceScreen android:key="server_add"
    		android:title="@string/s_pref_server_add"
    	/>
    </PreferenceCategory>
        
	<PreferenceCategory android:title="@string/s_pref_display">
		<CheckBoxPreference
			android:key="pref_hiddenFiles"
			android:title="@string/s_pref_hidden"
			android:summary="@string/s_pref_hidden_summary"/>
		<CheckBoxPreference
			android:key="pref_thumbnail"
			android:title="@string/s_pref_thumbs"
			android:defaultValue="true"
			android:summary="@string/s_pref_thumbs_summary"/>
		<ListPreference
			android:key="pref_view"
			android:title="@string/s_pref_view"
			android:summary="@string/s_pref_view_summary"
			android:entries="@array/view"
			android:entryValues="@array/view_value"
			android:dialogTitle="@string/s_pref_view" />
		<ListPreference
		    android:key="pref_start"
		    android:title="@string/s_pref_start"
		    android:summary="@string/s_pref_start_summary"
		    android:entries="@array/starts"
		    android:entryValues="@array/start_value"
		    android:dialogTitle="@string/s_pref_start" />
		<CheckBoxPreference
		    android:key="pref_fullscreen"
		    android:title="@string/s_pref_fullscreen"
		    android:summaryOn="@string/s_pref_fullscreen_summary_on"
		    android:summaryOff="@string/s_pref_fullscreen_summary_off"
		    android:defaultValue="true"
		    />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/s_pref_sort">
		<ListPreference
			android:key="pref_sorting"
			android:title="@string/s_pref_sort"
			android:summary="@string/s_pref_sort_summary"
			android:entries="@array/sorting"
			android:entryValues="@array/sorting_value"
			android:dialogTitle="@string/s_pref_sort" />
			
	</PreferenceCategory>
	
	    <PreferenceCategory android:title="@string/s_pref_advanced">
	        <CheckBoxPreference
	            android:key="pref_root"
	            android:title="@string/s_menu_root"
	            android:defaultValue="false"
	            />
	        <CheckBoxPreference
	            android:key="pref_stats"
	            android:title="@string/s_pref_stats_title"
	            android:summary="@string/s_pref_stats_summary"
	            android:defaultValue="false"
	            />
	    </PreferenceCategory>
		
</PreferenceScreen>