<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/menu_multi" android:title="@string/s_menu_multi" />
    <item android:id="@+id/menu_bookmark" android:title="@string/s_menu_bookmark" />
    <item android:id="@+id/menu_copy" android:title="@string/s_menu_copy" />
    <item android:id="@+id/menu_cut" android:title="@string/s_menu_cut" />
    <item android:id="@+id/menu_paste" android:title="@string/s_menu_paste" />
    <item android:id="@+id/menu_delete" android:title="@string/s_menu_delete" />
    <item android:id="@+id/menu_rename" android:title="@string/s_menu_rename" />
    <item android:id="@+id/menu_info" android:title="@string/s_menu_info" />
    <item android:id="@+id/menu_zip" android:title="@string/s_menu_zip" />
    <item android:id="@+id/menu_unzip" android:title="@string/s_menu_unzip" />
    
</menu>