<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
  	<item
  	    android:id="@+id/menu_favorites"
  	    android:showAsAction="never"
  	    android:icon="@drawable/ic_menu_star"
  	    android:title="@string/s_menu_favorites" />
    <item
		android:id="@+id/menu_paste"
		android:title="@string/s_menu_paste"
    	android:showAsAction="always|withText"
    	android:icon="@drawable/ic_menu_paste" />
	<item
		android:id="@+id/menu_search"
		android:icon="@android:drawable/ic_menu_search"
		android:showAsAction="always|collapseActionView"
		android:actionViewClass="android.widget.SearchView"
		android:title="@string/s_search" />
	<item
		android:id="@+id/menu_sort"
		android:icon="@android:drawable/ic_menu_sort_by_size"
		android:showAsAction="ifRoom"
		android:actionProviderClass="org.brandroid.openmanager.utils.SortActionProvider"
		android:title="@string/s_menu_sort">
		<menu>
			<group android:checkableBehavior="single">
				<item
					android:id="@+id/menu_sort_name_asc"
					android:checked="true"
					android:title="@string/s_menu_sort_name_asc"
					android:showAsAction="withText" />
				<item
					android:id="@+id/menu_sort_name_desc"
					android:title="@string/s_menu_sort_name_desc"
					android:showAsAction="withText" />
				<item
					android:id="@+id/menu_sort_date_asc"
					android:title="@string/s_menu_sort_date_asc"
					android:showAsAction="withText" />
				<item
					android:id="@+id/menu_sort_date_desc"
					android:title="@string/s_menu_sort_date_desc"
					android:showAsAction="withText" />
				<item
					android:id="@+id/menu_sort_size_asc"
					android:title="@string/s_menu_sort_size_asc"
					android:showAsAction="withText" />
				<item
					android:id="@+id/menu_sort_size_desc"
					android:title="@string/s_menu_sort_size_desc"
					android:showAsAction="withText" />
				<item
					android:id="@+id/menu_sort_type"
					android:title="@string/s_menu_sort_type"
					android:showAsAction="withText" />
			</group>
		</menu>
	</item>
	<item
		android:id="@+id/menu_view"
		android:icon="@android:drawable/ic_menu_view"
		android:showAsAction="ifRoom"
		android:title="@string/s_view">
		<menu>
			<item
				android:id="@+id/menu_multi"
				android:icon="@drawable/multiselect"
				android:showAsAction="ifRoom"
				android:title="@string/s_menu_multi" />
			<group android:checkableBehavior="single">
				<item
					android:id="@+id/menu_view_grid"
					android:title="@string/s_menu_grid" />
				<item
					android:id="@+id/menu_view_list"
					android:checked="true"
					android:title="@string/s_menu_list" />
				<item
					android:id="@+id/menu_view_carousel"
					android:title="@string/s_menu_carousel" />
			</group>
			<item
				android:id="@+id/menu_view_hidden"
				android:checkable="true"
				android:title="@string/s_menu_hidden" />
			<item
				android:id="@+id/menu_view_thumbs"
				android:checkable="true"
				android:checked="true"
				android:title="@string/s_menu_thumbs" />
		</menu>
	</item>
	<item
		android:id="@+id/menu_new_folder"
		android:icon="@android:drawable/ic_menu_add"
		android:showAsAction="ifRoom"
		android:title="@string/s_menu_new_folder" />
	<item
		android:id="@+id/menu_flush"
		android:icon="@drawable/ic_menu_refresh"
		android:showAsAction="never"
		android:title="@string/s_menu_flush" />
	<item
		android:id="@+id/menu_root"
		android:checkable="true"
		android:showAsAction="never"
		android:title="@string/s_menu_root" />
	<item
		android:id="@+id/menu_settings_folder"
		android:showAsAction="never"
		android:title="@string/s_menu_prefs_folder" />
	<item
		android:id="@+id/menu_settings"
		android:showAsAction="never"
		android:title="@string/s_menu_prefs_global" />
	<item
	    android:id="@+id/menu_about"
	    android:showAsAction="never"
	    android:title="@string/s_menu_about" />
</menu>
