<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="Server Settings">
	<EditTextPreference
	    android:key="server_name"
	    android:title="@string/s_pref_server_name"
	    android:summary="@string/s_pref_server_name_summary"
	    />
	<EditTextPreference
		android:key="server_url"
		android:title="@string/s_pref_server_url"
		android:summary="@string/s_pref_server_url_summary"
		/>
	<EditTextPreference
		android:key="server_user"
		android:title="@string/s_pref_server_user"
		android:summary="@string/s_pref_server_user_summary"
		/>
	<EditTextPreference
		android:key="server_password"
		android:title="@string/s_pref_server_password"
		android:summary="@string/s_pref_server_password_summary"
		android:password="true"
		/>
	<PreferenceScreen
	    android:key="server_update"
	    android:title="@string/s_pref_server_update"
	    />
</PreferenceScreen>