<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<item
		android:id="@+id/menu_multi"
		android:icon="@drawable/ic_multiselect"
		android:showAsAction="ifRoom"
		android:alphabeticShortcut="m"
		android:checkable="true"
		android:title="@string/s_menu_multi" />
	<!-- group android:checkableBehavior="single" -->
		<item
		    android:checkable="true"
			android:id="@+id/menu_view_grid"
			android:alphabeticShortcut="g"
			android:title="@string/s_menu_grid" />
		<item
		    android:checkable="true"
			android:id="@+id/menu_view_list"
			android:alphabeticShortcut="l"
			android:title="@string/s_menu_list" />
		<item
			android:id="@+id/menu_view_carousel"
			android:checkable="true"
			android:visible="false"
			android:title="@string/s_menu_carousel" />
	<!-- /group -->
	<item
		android:id="@+id/menu_view_hidden"
		android:checkable="true"
		android:alphabeticShortcut="h"
		android:title="@string/s_menu_hidden" />
	<item
		android:id="@+id/menu_view_thumbs"
		android:checkable="true"
		android:alphabeticShortcut="b"
		android:title="@string/s_menu_thumbs" />
	<item
	    android:id="@+id/menu_view_fullscreen"
	    android:checkable="true"
	    android:title="@string/s_pref_fullscreen" />
	<item
	    android:id="@+id/menu_view_split"
	    android:checkable="true"
	    android:title="@string/s_pref_basebar"
	    android:visible="@bool/prehoneycomb" />
</menu>